docs/api/qiskit/0.29/qiskit.chemistry.algorithms.QEOM.mdx
---
title: QEOM (v0.29)
description: API reference for qiskit.chemistry.algorithms.QEOM in qiskit v0.29
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.chemistry.algorithms.QEOM
---

# QEOM

<Class id="qiskit.chemistry.algorithms.QEOM" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.9/qiskit/chemistry/algorithms/excited_states_solvers/qeom.py" signature="QEOM(ground_state_solver, excitations='sd')" modifiers="class">
  Bases: `qiskit.chemistry.algorithms.excited_states_solvers.excited_states_solver.ExcitedStatesSolver`

  The calculation of excited states via the qEOM algorithm

  **Parameters**

  *   **ground\_state\_solver** (`GroundStateSolver`) – a GroundStateSolver object. The qEOM algorithm will use this ground state to compute the EOM matrix elements
  *   **excitations** (`Union`\[`str`, `List`\[`List`\[`int`]]]) – The excitations to be included in the eom pseudo-eigenvalue problem. If a string (‘s’, ‘d’ or ‘sd’) then all excitations of the given type will be used. Otherwise a list of custom excitations can directly be provided.

  ## Methods

  <span id="qiskit-chemistry-algorithms-qeom-solve" />

  ### solve

  <Function id="qiskit.chemistry.algorithms.QEOM.solve" signature="QEOM.solve(driver, aux_operators=None)">
    Run the excited-states calculation.

    Construct and solves the EOM pseudo-eigenvalue problem to obtain the excitation energies and the excitation operators expansion coefficients.

    **Parameters**

    *   **driver** (`BaseDriver`) – a chemistry driver object which defines the chemical problem that is to be solved by this calculation.
    *   **aux\_operators** (`Union`\[`List`\[`FermionicOperator`], `List`\[`BosonicOperator`], `None`]) – Additional auxiliary operators to evaluate. Must be of type `FermionicOperator` if the qubit transformation is fermionic and of type `BosonicOperator` it is bosonic.

    **Return type**

    `Union`\[`ElectronicStructureResult`, `VibronicStructureResult`]

    **Returns**

    The excited states result. In case of a fermionic problem a `ElectronicStructureResult` is returned and in the bosonic case a `VibronicStructureResult`.
  </Function>

  ## Attributes

  ### excitations

  <Attribute id="qiskit.chemistry.algorithms.QEOM.excitations">
    Returns the excitations to be included in the eom pseudo-eigenvalue problem.

    **Return type**

    `Union`\[`str`, `List`\[`List`\[`int`]]]
  </Attribute>
</Class>

